# SLIDE_SLAM

./: .gitignore  LICENSE.txt  README.md  external.yaml  run_slide_slam_docker.sh
backend/multi_robot_utils_launch/: CMakeLists.txt  package.xml
backend/multi_robot_utils_launch/launch/: play_bag_for_object_modeller.launch  play_bag_for_object_modeller_robot2.launch  play_bag_with_remapping.launch  publish_tf.launch  record_bag_for_vis_pennovation_lidar_seg_pc.launch  record_bag_multi_robot.launch  record_bag_ns_robot.launch  record_bag_vems_slam_ground_station.launch  record_bag_vems_slam_robot.sh
backend/multi_robot_utils_launch/launch/others/: relay_topics_for_loop_closure.launch  relay_topics_for_loop_closure_semantic_meas_and_odom.launch  relay_topics_for_loop_closure_step2.launch  relay_topics_multi_robot.launch  relay_topics_multi_robot_2_robots.launch  relay_topics_multi_robot_4_robots.launch
backend/multi_robot_utils_launch/script/: tmux_CoPeD.sh  tmux_multi_robot_indoor_outdoor-bkup.sh  tmux_multi_robot_with_bags.sh  tmux_multi_robot_with_bags_dcist.sh  tmux_multi_robot_with_bags_f250_scarab.sh  tmux_multi_robot_with_bags_forest.sh  tmux_multi_robot_with_bags_parking_lot.sh  tmux_multi_robot_with_bags_scarabs_indoor.sh  tmux_single_indoor_robot.sh  tmux_single_indoor_robot_open_vocab.sh  tmux_single_outdoor_kitti.sh  tmux_single_outdoor_robot.sh
backend/multi_robot_utils_launch/script/CoPeD/: tmux_CoPeD.sh  tmux_CoPeD_ground_aerial.sh
backend/sloam/: CMakeLists.txt  package.xml
backend/sloam/clipper_semantic_object/: README.md
backend/sloam/clipper_semantic_object/clipper_semantic_object/: .gitignore  CMakeLists.txt  README.md
backend/sloam/clipper_semantic_object/devel/: _setup_util.py  local_setup.sh  setup.bash  setup.sh  setup.zsh
backend/sloam/clipper_semantic_object/include/: semantic_clipper.h
backend/sloam/clipper_semantic_object/src/: semantic_clipper.cpp
backend/sloam/clipper_semantic_object/test/: test_semantic_clipper.cpp
backend/sloam/include/core/: cubeMapManager.h  cylinderMapManager.h  databaseManager.h  ellipsoidMapManager.h  input.h  inputNode.h  place_recognition.h  robot.h  sloam.h  sloamNode.h  sloamNodelet.h
backend/sloam/include/factorgraph/: cubeFactor.h  cylinderFactor.h  graph.h  graphWrapper.h
backend/sloam/include/helpers/: definitions.h  serialization.h  utils.h
backend/sloam/include/objects/: cube.h  cylinder.h  ellipsoid.h  plane.h  semanticObject.h
backend/sloam/include/viz/: vizTools.h
backend/sloam/launch/: decentralized_sloam.launch  decentralized_sloam_indoor_outdoor.launch  decentralized_sloam_multi_robot_dcist.launch  decentralized_sloam_multi_robot_f250_scarab.launch  decentralized_sloam_multi_robot_forest.launch  decentralized_sloam_multi_robot_seven_robots_indoor_outdoor.launch  decentralized_sloam_scarab.launch  play_bag_indoor_scarab.launch  play_multi_robot_bags_with_remapping.launch  run.launch  run_indoor_large_scale_exploration.launch  run_pennovation.launch  run_sim.launch  segmentation.launch  single_robot_sloam_test.launch  single_robot_sloam_test_LiDAR.launch  single_robot_sloam_test_benchmark.launch  single_robot_sloam_test_outdoor.launch  sloam.launch  sloam.launch.debug  sloam_bw_test.launch
backend/sloam/launch/rviz/: decentralized_sloam.rviz  decentralized_sloam_CoPeD.rviz  sloam.rviz  sloam_active_slam.rviz
backend/sloam/launch/unit_tests/: place_recognition_test.launch
backend/sloam/params/: sloam-forest-parking-lot.yaml  sloam.yaml  sloam_CoPeD.yaml  sloam_multiUGV.yaml
backend/sloam/resource/: cabinet.stl  chair-no-back.dae  chair.stl  combine_cad_mode.py  door.stl  microwave.stl  monitor.stl  move_chair.py  plant.stl  robot.stl  rotate_door.py  scale_object.py  table2.stl
backend/sloam/src/core/: cubeMapManager.cpp  cylinderMapManager.cpp  databaseManager.cpp  ellipsoidMapManager.cpp  input.cpp  inputNode.cpp  place_recognition.cpp  robot.cpp  sloam.cpp  sloamNode.cpp  sloamNodelet.cpp
backend/sloam/src/factorgraph/: cubeFactor.cpp  cylinderFactor.cpp  graph.cpp  graphWrapper.cpp  graph_important.cpp
backend/sloam/src/objects/: cube.cpp  cylinder.cpp  ellipsoid.cpp  plane.cpp
backend/sloam/src/test/: input_test.cpp  place_recognition_test.cpp  sloam_test.cpp  utils_test.cpp
backend/sloam/src/tests/: cube_factor_test.cpp  cylinder_factor_test.cpp  cylinder_test.cpp  inter_robot_factor_test.cpp  loop_closure_test.cpp  place_recognition_test.cpp  plane_test.cpp
backend/sloam_msgs/: CMakeLists.txt  package.xml
backend/sloam_msgs/action/: ActiveLoopClosure.action  DetectLoopClosure.action
backend/sloam_msgs/msg/: MultiArrayPoseObjectEdges.msg  OdometryGPSBundle.msg  PoseMst.msg  PoseMstBundle.msg  ROSCube.msg  ROSCylinder.msg  ROSCylinderArray.msg  ROSEllipsoid.msg  ROSRangeBearing.msg  ROSRangeBearingSyncOdom.msg  ROSSyncOdom.msg  RelativeInterRobotMeasurement.msg  RelativeInterRobotMeasurementOdom.msg  SemanticLoopClosure.msg  SemanticMeasSyncOdom.msg  StampedRvizMarkerArray.msg  cubeMap.msg  cylinderMap.msg  interRobotTF.msg  keyPoses.msg  poseObjectEdges.msg  syncPcOdom.msg  vector4d.msg  vector7d.msg
backend/sloam_msgs/srv/: EvaluateLoopClosure.srv
docker/: Dockerfile  (+8 more)
frontend/object_modeller/: CMakeLists.txt  package.xml
frontend/object_modeller/config/: cls_all.yaml  cylinder_plane_modeller_params.yaml  rgb_segmentation_open_vocab_params.yaml
frontend/object_modeller/launch/: rgb_segmentation_f250.launch  rgb_segmentation_open_vocab.launch  sync_semantic_measurements.launch
frontend/object_modeller/object_detector_utils/: demo_test_yolo_world.py  detect.py  detect_open_vocab.py  original_detect.py
frontend/object_modeller/rviz/: default.rviz  object_modeller.rviz
frontend/object_modeller/script/: cylinder_plane_modeller.py  merge_synced_measurements.py  sync_centroid_odom.py  sync_cuboid_odom.py  sync_cylinder_odom.py  tmux_benchmark.sh  tmux_indoor_outdoor_merge.sh  tmux_run_all_nodes.sh  tmux_run_all_nodes_jiuzhou.sh
frontend/object_modeller/src/: cylinder_modeller.cpp
frontend/scan2shape/scan2shape_launch/: CMakeLists.txt  package.xml
(+187 files in other folders)
