<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>sloam_msgs</name>
  <version>0.0.1</version>
  <description> Defines the messages that are used to communicate with the sloam package. </description>

  <license>TODO</license>
  <maintainer email="yztao@seas.upenn.edu">Yuezhao Tao</maintainer>
  <maintainer email="liuxu@seas.upenn.edu">Xu Liu</maintainer>
  <author email="yztao@seas.upenn.edu">Yuezhao Tao</author>
  <author email="liuxu@seas.upenn.edu">Xu Liu</author>
  <author email="guinardari@usp.br">Guilherme Nardari</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>visualization_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
</package>